# learn-plattform

./: .gitignore  .pre-commit-config.yaml  README.md
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
api/: .env.example  pyproject.toml
api/app/: main.py
api/app/core/: auth.py  config.py
api/app/models/: learning_path.py  news.py  video.py
api/app/routers/: auth.py  critique.py  epub.py  learning_paths.py  news.py  videos.py
api/app/services/: critique_service.py  epub_service.py  learning_path_service.py  news_service.py  quiz_service.py  supabase_client.py  video_service.py
api/tests/: test_health.py
frontend/: app.vue  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
frontend/components/: CritiqueCard.vue  EpubReader.vue  LearningPathCard.vue  NewsCard.vue  QuizModal.vue  VideoCard.vue
frontend/composables/: useApi.ts  useAuth.ts  useLearningPaths.ts  useNews.ts
frontend/layouts/: default.vue
frontend/middleware/: auth.global.ts
frontend/pages/: index.vue  learn.vue  login.vue  news.vue  videos.vue
frontend/pages/auth/: callback.vue
frontend/plugins/: supabase.client.ts
frontend/tests/: learn.test.ts  news.test.ts  videos.test.ts
infra/: .env.example  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml  nginx.conf
infra/migrations/: 001_initial_schema.sql
worker/: config.py  db.py  main.py  pyproject.toml
worker/jobs/: gmail_parser.py  news_generator.py  rss_fetcher.py  video_aggregator.py
worker/scrapers/: __init__.py  base.py  coursera.py  deeplearning_ai.py  google_ai.py
worker/tests/: test_jobs.py
